--- a/api/api/src/main/resources/application.properties
+++ b/api/api/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=api
+spring.datasource.url=jdbc:postgresql://localhost:5434/vollmed_api
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgre
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
